# skill_mapper

./: .env.example  .gitignore  README.md  pyproject.toml
config/: model_config.local.yaml.example  model_config.yaml
config/prompts/: grade_rating_prompt.md  grade_rating_prompt.yaml  grade_relevance_prompt.yaml
src/openai_judger/: judger.py
src/skill_judger/: auth.py  config.py  grader.py  orchestrator.py  prod_provider.py  rate_limiter.py  testing_provider.py  validate_csv.py
